@@ -1,3 +1,8 @@
+Fri Apr  9 10:17:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
+          Fixed default behaviour
+
 Fri Apr  9 09:46:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/examples/Large_Deployment/descriptors/run_test.pl
